# Nifty-Quant

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
conf/: config.yaml
conf/backtest/: monthly.yaml
conf/data/: yahoo.yaml
conf/execution/: india_equities.yaml
conf/logging/: default.yaml
conf/portfolio/: inverse_vol.yaml
conf/strategy/: arima.yaml  momentum_12_1.yaml
conf/universe/: nifty50.yaml
nifty_quant/: main.py
nifty_quant/application/: __init__.py  backtest_runner.py
nifty_quant/bootstrap/: config_schema.py
nifty_quant/domain/: metrics.py  models.py
nifty_quant/domain/backtest/: engine.py
nifty_quant/domain/strategies/: __init__.py  arima.py  base.py  momentum_12_1.py  registry.py
nifty_quant/infrastructure/data/: yahoo_price_repository.py
nifty_quant/infrastructure/execution/: india_equities.py
nifty_quant/interfaces/: execution_model.py  price_repository.py
nifty_quant/web/: __init__.py  app.py
nifty_ticker/: ticket_extractor.py
nifty_ticker/nifty_snapshots/: nifty50_20260315_0731.csv  nifty50_20260315_0731.yaml
src/: main.py
src/interfaces/: prices_repository.py
static/: styles.css
templates/: base.html  dashboard.html
tests/domain/: fakes.py  test_backtest_engine.py  test_execution_model.py  test_metrics.py
tests/infrastructure/data/: test_yahoo_price_repository.py
