[project]
name = "nifty-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "yfinance>=1.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-p no:hydra"
testpaths = ["tests"]
